--- a/app/views/aboutus/index.scala.html
+++ b/app/views/aboutus/index.scala.html
@@ -3,7 +3,7 @@
 
     <div class="container-fluid maincontent-container">
         <div class="row-fluid">
-            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+            <div class="col-xs-12 col-md-8 col-md-offset-1 col-xs-offset-0">
                 <div class="row">
                     <div class="col-xs-12 col-sm-2">
                         <h3>Leftmenu header</h3>
@@ -18,6 +18,11 @@
                         <p>Vi som driver denna klubb har flera av oss både arbetat professionellt men också bloggat och fotat mat under många år. Denna klubb är skapad just i syftet att samla alla landets och kanske världens matintresserade på en och samma plats, där du kan bjuda hem andra och bli hembjuden till nya vänner för att dela era erfarenheter och intressen.</p>
                     </div>
                 </div>
+            </div>
+
+            <!-- Banner -->
+            <div class="col-xs-12 col-md-2 col-banner">
+                @shared.banner("images/banners/banner-0001.png","http://www.bannertarget.se","Senaste nyheterna","Senaste nyheterna")
             </div>
         </div>
     </div>
