--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -3,7 +3,7 @@
 
     <div class="container-fluid newsletter">
         <div class="row-fluid">
-            <div class="col-xs-12 col-md-10 col-md-offset-2 col-xs-offset-0">
+            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0 margin-top">
                 @shared.img("images/campaign/campaign_header.jpg", None, None, cssClass = "header-img")
                 <div class="row">
                 <div class="col-md-6 col-xm-12">
