--- a/app/views/footer/footer.scala.html
+++ b/app/views/footer/footer.scala.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container-fluid footer-container">
         <div class="row-fluid">
-            <div class="col-md-4 col-md-offset-5 margin-top">
+            <div class="col-xs-12 margin-top text-center">
                 @Messages("footer.text") | <a href="@Messages("footer.link.mail.href")" title="@Messages("footer.link.mail.title")" target="_blank">@Messages("footer.link.mail.text")</a>
             </div>
         </div>
