--- a/app/views/file/index.scala.html
+++ b/app/views/file/index.scala.html
@@ -1,34 +1,29 @@
 @(nameOfConfig: String = null)
 
 @main(Messages("file.title")) {
-    <div class="container-fluid">
+    <div class="container-fluid maincontent-container">
         <div class="row-fluid">
-            <div class="col-md-offset-3 col-md-6">
-                <h1>@Messages("file.upload.header")</h1>
-                @file.uploadform()
-            </div>
-        </div>
+            <div class="col-xs-12 col-md-8 col-md-offset-1 col-xs-offset-0">
 
-@*        <div class="row-fluid">
-            <div class="col-md-offset-3 col-md-6">
-                <h2>@Messages("file.filelist.header")</h2>
+                <div class="row-fluid">
+                    <div class="col-md-offset-3 col-md-6">
+                        <h1>@Messages("file.upload.header")</h1>
+                        @file.uploadform()
+                    </div>
+                </div>
 
-                <a href="@routes.FileController.listS3Files("")">List all files raw from S3</a><br>
-                @if(!fileList.isEmpty){
-                    <ul>
-                    @for(fileItem <- fileList) {
-                        @for(item <- fileItem) {
-                            <li><a href="@routes.FileController.listS3Files(item)">@item</a></li>
-                        }
-                    }
-                    </ul>
-                }
+                <div class="row-fluid">
+                    <div class="col-md-offset-3 col-md-6">
+                        <h2>@Messages("file.filelist.header")</h2>
+                        @FileListController.listAllImages
+                    </div>
+
+                </div>
+
             </div>
-        </div>*@
-        <div class="row-fluid">
-            <div class="col-md-offset-3 col-md-6">
-                <h2>@Messages("file.filelist.header")</h2>
-                @FileListController.listAllImages
+            <!-- Banner -->
+            <div class="col-xs-12 col-md-2 col-banner">
+            @shared.banner("images/banners/banner-0001.png","http://www.bannertarget.se","Senaste nyheterna","Senaste nyheterna")
             </div>
         </div>
     </div>
