--- a/app/views/custom/login.scala.html
+++ b/app/views/custom/login.scala.html
@@ -10,6 +10,8 @@
         <h1>@Messages("securesocial.login.title")</h1>
     </div>
 
+    PlayFramwork
+
     @errorMsg.map { msg =>
         <div class="alert alert-error">
             @Messages(msg)
