--- a/app/views/shared/banner.scala.html
+++ b/app/views/shared/banner.scala.html
@@ -2,5 +2,5 @@
 
 <div class="banner">
     <div class="banner-header">@Messages("banner.header")</div>
-    <a href="@linkPath" target="_blank">@shared.img(imgPath.stripPrefix("/"), None, None, cssClass = "banner")</a>
+    <a href="@linkPath" target="_blank">@shared.img(imgPath.stripPrefix("/"), Some(240), None, cssClass = "banner")</a>
 </div>
