--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -16,7 +16,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                @shared.img("images/startpage/startpage-carousel-image-03.jpg", None, None, "")
+                @shared.img("images/startpage/startpage-carousel-image-03.jpg", alt = "")
                 <div class="carousel-caption green-bg right-align animated fadeInRightBig">
                     <h2>Home Dining Club</h2>
                     <p>Vad är det?</p>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="item">
-                @shared.img("images/startpage/startpage-carousel-image-04.jpg", None, None, "")
+                @shared.img("images/startpage/startpage-carousel-image-04.jpg", alt = "")
                 <div class="carousel-caption green-bg right-align animated fadeInRightBig">
                     <h2>Slipp Disken</h2>
                     <p>Ät hemma hos någon!</p>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="item">
-                @shared.img("images/startpage/startpage-carousel-image-02.jpg", None, None, "")
+                @shared.img("images/startpage/startpage-carousel-image-02.jpg", alt = "")
             </div>
             <div class="item">
                 @shared.img("images/startpage/startpage-carousel-image-05.jpg", None, None, "")
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="item">
-                @shared.img("images/startpage/startpage-carousel-image-06.jpg", None, None, "")
+                @shared.img("images/startpage/startpage-carousel-image-06.jpg", alt = "")
                 <div class="carousel-caption animated fadeInLeftBig">
                     <h2>Introduktions video</h2>
                     <iframe src="//player.vimeo.com/video/97540915?title=1&amp;byline=1&amp;portrait=1&amp;color=fafafa&amp;autoplay=0" width="293" height="165" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
