--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2,7 +2,7 @@
 @import "animate.less";
 @import "gray.less";
 @import "star-rating.min.less";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
+//@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
 
 // Variables
 @hdc-green: #6fc2b5;
@@ -59,7 +59,7 @@ body{
 // General headers
 h1,h2,h3,h4,h5,h6{
   color: @header-color;
-  font-weight:bold;
+  font-weight:normal;
 }
 h1{
   font-size:26px;
@@ -152,7 +152,6 @@ label{
 // Buttons
 .btn-primary,
 input[type="submit"],
-button,
 input[type="reset"]
 {
   margin-top:10px;
@@ -169,7 +168,6 @@ input[type="reset"]
 }
 .btn-primary:hover,
 input[type="submit"]:hover,
-button:hover,
 input[type="reset"]:hover
 {
   background-image: linear-gradient(to bottom, lighten(@hdc-green, 5%) 0px, darken(@hdc-green, 15%) 100%);
@@ -283,15 +281,21 @@ input[type="reset"]:hover
 }
 .header-spacing
 {
-  height:147px;
+  background-image: url("/assets/images/general/bg-menu-backdrop-90x1024.jpg");
+  background-repeat: repeat-x;
+  padding-bottom: 50px;
+  height:197px;
+  //height:111px;
 }
-
-.logo img
+.logo-img
 {
   background-color: #fff;
   padding: 5px 10px 5px 10px;
   border-radius: 10px;
+  float:left;
 }
+
+
 
 // Header - Quicklinks
 .quicklinks
@@ -299,12 +303,19 @@ input[type="reset"]:hover
   border:1px solid #999;
   background-color: #fff;
   border-radius: 5px;
+  float:right;
 }
 .quicklinks .nav > li > a {
   padding:8px 10px;
   font-size:13px;
 }
 
+// Header - Login form
+.header-login-form
+{
+  padding-top:15px;
+  padding-bottom:15px;
+}
 
 // Header - Main navigation
 .header-navigation
@@ -337,11 +348,15 @@ input[type="reset"]:hover
   color:#000;
   text-shadow: none;
 }
+.navbar-toggle-custom
+{
+  padding:10px 8px 10px 8px;
+  margin:0px;
+}
 .icon-bar
 {
   background-color: @hdc-green;
 }
-
 
 
 
@@ -376,7 +391,7 @@ input[type="reset"]:hover
 
 
 // Start page
-#carousel-startpage .carousel
+#carousel-startpage.carousel
 {
   margin-top:-36px;
 }
@@ -662,7 +677,10 @@ input[type="reset"]:hover
 }
 /* Small devices (tablets, 768px and up) */
 @media screen and (min-width:768px) {
-
+  .collapse
+  {
+    display: inherit;
+  }
 }
 /* Small devices (tablets, 768px and down) */
 @media screen and (max-width: 768px) {
@@ -674,7 +692,59 @@ input[type="reset"]:hover
   }
 
   // Header
-  .logo img
+  .quicklinks .nav>li>a
+  {
+    padding: 8px 5px;
+  }
+  .navbar-fixed-top
+  {
+    position: relative;
+  }
+  .header-container
+  {
+    min-height: 75px;
+    height:auto;
+    max-height: none;
+  }
+  .header-navigation
+  {
+    height:auto;
+    max-height:none;
+  }
+  .header-navigation .nav-main-menu>li
+  {
+    text-align: center;
+    white-space:nowrap;
+    border:1px solid;
+    background-image: linear-gradient(to bottom, @hdc-green 0px, darken(@hdc-green, 20%) 100%);
+    color: @input-button-text-color;
+    background-color: @hdc-green;
+    border-color: darken(@hdc-green, 20%);
+    color:#fff;
+  }
+  .header-navigation .nav-pills>li+li
+  {
+    margin:0px;
+  }
+  .header-navigation .nav-pills>li
+  {
+    float:none;
+  }
+  .header-spacing
+  {
+    height:50px;
+    background: none;
+  }
+  .nav-main-menu
+  {
+    height:auto;
+    margin-top:15px;
+  }
+  .collapse
+  {
+    display: none;
+  }
+  .logo-img
   {
     width:150px;
   }
