--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -4,13 +4,13 @@
     <div class="container-fluid newsletter">
         <div class="row-fluid">
             <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0 margin-top">
-                @shared.img("images/campaign/campaign_header.jpg", None, None, cssClass = "header-img")
+                @shared.img("images/campaign/campaign_header.jpg", cssClass = "header-img")
                 <div class="row">
                 <div class="col-md-6 col-xm-12">
                     <h1>@Messages("campaign.header")</h1>
                     <p>@Messages("campaign.preamble")</p>
                     <a class="widget-image-link" href="https://www.facebook.com/homediningclub" target="_parent">
-                        @shared.img("images/campaign/facebook.jpg", None, None, cssClass = "facebook")
+                        @shared.img("images/campaign/facebook.jpg", cssClass = "facebook")
                     </a>
                 </div>
                 <div class="col-md-4 col-xm-12">
