--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -3,44 +3,53 @@
     <div class="navbar-fixed-top">
         <div class="container-fluid">
             <div class="row-fluid no-gutter header-container">
-                <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0 logo">
-                    <a href="@routes.StartPageController.index()">@shared.img("images/general/logo-horizontal.png", Some(239), Some(93), Messages("header.logo.alt"))</a>
-
-                    <div class="pull-right visible-xs">
-                        <div class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-                            <span class="hidden">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </div>
-                    </div>
-
-                    <div class="pull-right quicklinks">
+                <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+                    <a href="@routes.StartPageController.index()">@shared.img("images/general/logo-horizontal.png", alt = Messages("header.logo.alt"), cssClass = "logo-img img-responsive")</a>
+                    <div class="quicklinks">
                         <ul class="nav nav-pills">
                             <li><a href="@routes.HostController.index()">@Messages("header.link.host-profile")</a></li>
                             <li><a href="#">@Messages("header.link.inbox") <span class="badge">42</span></a></li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    Sign In <span class="caret"></span>
+                                    @Messages("header.link.login")<span class="caret"></span>
                                 </a>
-                                <ul class="dropdown-menu dropdown-menu-right">
-                                    <li>
-                                        <!-- Login form here -->
-                                        here be login
 
-                                    </li>
-                                </ul>
+                                <div class="dropdown-menu dropdown-menu-right header-login-form">
+                                    <div class="col-xs-12">
+                                        <form class="form-inline" role="form">
+                                            <div class="form-group">
+                                                <label class="sr-only" for="quickemail">@Messages("header.login-form.email")</label>
+                                                <input type="email" class="form-control" id="quickemail" placeholder="@Messages("header.login-form.email")">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="sr-only" for="quickpassword">@Messages("header.login-form.password")</label>
+                                                <input type="password" class="form-control" id="quickpassword" placeholder="@Messages("header.login-form.password")">
+                                            </div>
+                                            <button type="submit" class="btn btn-primary">@Messages("header.login-form.submit")</button>
+                                        </form>
+                                    </div>
+                                </div>
+
+                            </li>
+                            <li class="visible-xs">
+                                <button class="navbar-toggle navbar-toggle-custom" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse" title="@Messages("header.mobile-menu.title")">
+                                    <span class="sr-only">@Messages("header.mobile-menu.title")</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
                             </li>
                         </ul>
-                        </div>
                     </div>
+
 
                 </div>
             </div>
-            <div class="row-fluid header-navigation hidden-xs bs-navbar-collapse">
+
+            <div class="row-fluid header-navigation">
                 <nav>
                     <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
-                        <ul class="nav nav-pills nav-main-menu collapse navbar-collapse  ">
+                        <ul class="nav nav-pills nav-main-menu collapse bs-navbar-collapse">
                             @for(nav <- menuItems) {
                                 <li><a class="@nav._4" href="@nav._3" title="@nav._2">@nav._1</a></li>
                             }
@@ -48,6 +57,7 @@
                     </div>
                 </nav>
             </div>
+
         </div>
     </div>
     <div class="header-spacing"><!-- no content --></div>
