--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,6 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic" />
         <link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.min.css")">
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
@@ -20,7 +21,7 @@
         @*TODO - Create controllers with local backups, also bundle *@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+        @*<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>*@
         <script src="@routes.Assets.at("javascripts/jquery.gray.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/star-rating.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/site.js")"></script>
