Remake of content parts completly

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -595,7 +595,22 @@ input[type="reset"]:hover
 }
 
 
+// Content pages
+.content-side-menu
+{
+  margin-top:10px;
+}
+.content-side-menu ul
+{
+  list-style: none;
+  padding:0px;
+}
 
+.content-side-menu li
+{
+  list-style: none;
+  padding:2px 0px;
+}
 
 // Host
 .host-image
