--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -25,6 +25,7 @@
                                                 <label class="sr-only" for="quickpassword">@Messages("header.login-form.password")</label>
                                                 <input type="password" class="form-control" id="quickpassword" placeholder="@Messages("header.login-form.password")">
                                             </div>
+                                            <a href="@securesocial.core.providers.utils.RoutesHelper.handleStartResetPassword()" title="@Messages("header.login-form.forgot-password")">@Messages("header.login-form.forgot-password")</a>
                                             <button type="submit" class="btn btn-primary">@Messages("header.login-form.submit")</button>
                                         </form>
                                     </div>
