--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -28,7 +28,7 @@
                 <div class="carousel-caption green-bg right-align animated fadeInRightBig">
                     <h2>Slipp Disken</h2>
                     <p>Ät hemma hos någon!</p>
-                    <p><a class="btn btn-lg btn-primary" href="@routes.AboutUsController.index()" role="button">Hur fungerar det?</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="@routes.ContentController.aboutUs()" role="button">Hur fungerar det?</a></p>
                 </div>
             </div>
             <div class="item">
